<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome_to_our_app"
        android:textColor="@color/Blue"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/emailIdEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/Blue"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/visibilityimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_invisible" />
    </LinearLayout>


    <TextView
        android:id="@+id/ortv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/or"
        android:textSize="20sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtnsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="normal"
        app:cornerRadius="5dp" />

</LinearLayout>